--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         .envelope {
             position: relative;
             width: 100%;
+            max-height:900px
             max-width: 360px;
             height: 0;
             padding-bottom: 69.44%;
@@ -530,3 +531,4 @@
 
 
 </html>
+
