--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         }
 
         .content-container.visible {
-            transform: translateX(-50%) translateY(0);
+            transform: translateX(-50%) translateY(-10%);
             padding: 75px;
         }
 
@@ -531,5 +531,6 @@
 
 
 </html>
+
 
 
